# pdf-classaction-rag

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  architecture.md  main.py  mesa.config.ts  pyproject.toml
backend/: main.py  pyproject.toml
backend/migrations/: 000004_add_status_and_file_size.up.sql
backend/scripts/: verify_extraction.py
backend/src/pdf_llm_server/: server.py
backend/src/pdf_llm_server/rag/: __init__.py  chunking.py  database.py  ingestion.py  models.py  pdf_parser.py  reducto_parser.py  reranker.py  retriever.py
backend/tests/: test_pdf_parser.py  test_rag_database.py  test_rag_retriever.py  test_reranker.py
frontend/: package-lock.json  package.json
frontend/src/components/: BboxHighlight.tsx  ChatPanel.tsx  DocumentList.tsx  EvidenceCard.tsx  EvidencePanel.tsx  MessageBubble.tsx  PdfPageViewer.tsx  QueryInput.tsx
frontend/src/hooks/: index.ts  useIngest.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/routes/: __root.tsx  index.tsx
migrations/: 000001_create_documents_table.up.sql  000002_create_chunks_table.up.sql  000003_add_bbox_to_chunks.up.sql
src/pdf_llm_server/: server.py
src/pdf_llm_server/rag/: __init__.py  chunking.py  database.py  embeddings.py  ingestion.py  models.py  ocr.py  pdf_parser.py  retriever.py
tests/: test_chunking.py  test_ocr.py  test_rag_database.py  test_rag_embeddings.py  test_rag_ingestion.py  test_rag_retriever.py
